pd/nw/css/default.css
/* ... */
p.msg::after {
    content: "";
    height: 100%;
    width: 5px;
    /* background-image: url(../msg-box-flag.svg); */
    position: absolute;
    top: 0%;
    left: 100%;
}

/* not sure what this is doing here... */
text {
    //fill: red;
    //cursor: default;
}

/* used for numbox2 to highlight contents when clicked on in runmode */
text.activated {
    fill: red;
    cursor: default;
}

/* not sure if this is still needed...
   updated the coloring just in case */
.selected_border {
    stroke: #e87216;
    stroke-dasharray: none;
    stroke-width: 1;
}

.msg .border {
    stroke: #ccc;
    fill: #f8f8f6;
}

/* state of msg box when clicking it */
.msg.flashed .border {
    stroke-width: 4;
}

/* atom box */
.atom .border {
    stroke: #ccc;
    fill: #eee;
}

/* flatgui knob border */
.flatgui.knob.border {
    stroke: none;
    fill: none;
}

/* for dropdown box we want to visually distinguish boxes that output
   the index from boxes that output the value. For now we do that by
   stroking the arrow for boxes that output an index. For boxes that
   output the value we don't need a CSS rule, as the arrow will be filled
   black by default */
.atom .index_arrow {
    stroke: black;
    stroke-width: 1;
    fill: none;
}

/* gatom "activated" text (i.e., when it has the keyboard focus) */
.atom.activated .data {
    fill: red;
}

/* Increases dropdown scrollbar and scrollbar track area for better touch UX */
#dropdown_list::-webkit-scrollbar {
    width: 32px;
}

#dropdown_list::-webkit-scrollbar-thumb {
    border-radius: 10px;
    background-color: #555;
}

#dropdown_list {
    position: absolute;
    border-width: 1px;
    border-style: solid;
    border-color: #c3c3c3;
    cursor: pointer;
    box-shadow: 5px 0 5px -5px #aaa, 0 5px 5px -5px #aaa, -5px 0 5px -5px #aaa;
    overflow-y: auto;
}

#dropdown_list ol {
    list-style-position: inside;
    margin: 0;
    padding: 0;
    background: #eee;
}

#dropdown_list li {
    list-style-type: none;
    padding: 5px;
}

#dropdown_list li.highlighted {
    background-color: #c3c3c3;
}

.obj .border {
    fill: #f6f8f8;
    stroke: #ccc;
}

.obj .border.dirty {
    stroke: #ff0000;
}

.obj .border.subdirty {
    stroke: #ff8800;
}

.comment .border {
    fill: none;
}

#patchsvg.editmode .comment .border {
    stroke: #aaa;
    stroke-dasharray: 3 2;
}

/* ico@vt.edu: added selected border coloring
   in edit mode only */
#patchsvg.editmode .comment.selected .border {
    stroke: #e87216;
}

/* A little hack for special case of [cnv].
   All other iemguis have a black border, but
   [cnv] sets its selection rectangle to the
   user-supplied fill color when the object
   isn't selected */
.iemgui .border:not(.mycanvas_border) {
    stroke: black;
}

.graph .border {
    stroke: black;
    fill: none;
}

/* Graph (or subpatch) that has been opened to inspect its contents */
.graph.has_window .border {
    stroke: black;
    fill: gray;
}

/* border color for selected objects
      * an element with the class "border"
      * the element is contained within a parent element of class "selected"
      * that parent element is not in class "gop"
   in plain English:
      This lets us highlight an object's border, unless it is inside a gop
      canvas.
   
   ico@vt.edu added selection highlight only if we are in editmode
*/
#patchsvg.editmode :not(.gop).selected .border {
    stroke: #e87216;
    display: inline;
}

/* text inside selected objects
   ico@vt.edu added selection highlight only if we are in editmode */
#patchsvg.editmode :not(.gop).selected text {
    fill: #e87216;
}

/* for an object that didn't create */
.obj .border.broken_border {
    fill: #f7d7d7;
    stroke: #f00;
    stroke-width: 2;
    stroke-dasharray: 6 2;
}

/* control inlet */
.xlet_control {
    stroke: #777;
    fill: white;
    stroke-width: 1;
}

/* signal inlet */
.xlet_signal {
    stroke: #777;
    fill: #808095;
    stroke-width: 1;
}

/* iemgui inlet or outlet in editmode */
.editmode .xlet_iemgui {
    stroke: black;
    fill: black;
    stroke-width: 1;
    visibility: visible;
}

/* iemgui inlet or outlet -- ico@vt.edu 2020-11-29:; by default now hidden */
.xlet_iemgui {
    visibility: hidden;
}

/* text label for an iemgui */
.editmode .iemgui_label_selected {
    fill: #e87216;
}

/* test of xlet hover animation... this should 
   probably use the web animation API instead. That
   way the animation won't get cut off when you
   move off the object. We can't do that currently
   because Pd just floods us with pairs of messages 
   for every pixel we move inside an xlet. */
@-webkit-keyframes fizzle {
    0% {
        stroke-width: 12;
        stroke-opacity: 1;
    }
    100% {
        stroke-width: 5;
        stroke-opacity: 1;
    }
}

/* can't remember why this was tagged !important */
.editmode .xlet_selected,
.editmode .xlet_iemgui.xlet_selected {
    stroke: #e87216;
    fill: #e87216;
    stroke-width: 5;
    -webkit-animation: fizzle 0.1s ease-in 1;
}

.xlet_disabled {
    stroke: gray !important;
    fill: gray !important;
}

/* special case for ggee/image since its border is only visible in edit mode */
.editmode .image.border {
    stroke: #ccc;
    visibility: visible;
}

.editmode .selected .image.border {
    stroke: #e87216;
}

.image.border {
    visibility: hidden;
}

.editmode .label_drag_handle,
.editmode .gop_drag_handle {
    stroke: #e87216;
    visibility: visible;
}

.label_drag_handle, .gop_drag_handle {
    visibility: hidden;
}

#console_find {
    width: 100%;
    height: 1em;
    padding-top: 2px;
    padding-left: 3px;
    padding-bottom: 9px;
    background: rgba(192,192,192,0.85);
    position: fixed;
    bottom: 0;
    left: 0;
}

#canvas_find {
    width: 100%;
    height: 1em;
    padding-top: 2px;
    padding-left: 3px;
    padding-bottom: 9px;
    background: rgba(192,192,192,0.85);
    position: fixed;
    bottom: 0;
    left: 0;
}
/* ... */

